[package]
name = "stressful-object-storage"
version = "0.1.0"
edition = "2021"

authors = ["Ho Kim <ho.kim@ulagbulag.io>"]
description = "Load testing tool for versatile object storage benchmarks"
documentation = "https://docs.rs/kiss-api"
include = ["src/**/*.rs", "Cargo.toml"]
keywords = ["iac", "kubernetes", "openark"]
license = "AGPL-3.0-or-later"
readme = "./README.md"
rust-version = "1.78"
homepage = "https://github.com/ulagbulag/OpenARK"
repository = "https://github.com/ulagbulag/OpenARK"

[[bin]]
name = "sos"
path = "./src/main.rs"

[features]
default = ["sas"]
sas = ["dep:sas"]

[dependencies]
anyhow = { version = "*", features = ["backtrace"] }
ark-core = { git = "https://github.com/ulagbulag/OpenARK", features = [
    "signal",
] }
byte-unit = { version = "5.1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
dotenv = { version = "0.15" }
duration-string = { version = "0.4", features = ["serde"] }
futures = { version = "0.3" }
rand = { version = "0.8" }
rust-s3 = { version = "0.34", default-features = false, features = [
    "fail-on-err",
    "http-credentials",
    "tags",
    "tokio-rustls-tls",
] }
sas = { version = "0.1", optional = true, features = ["numa"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1" }
